crates/test-ui/ui/extern_methods_invalid_type.stderr
error[E0277]: the trait bound `Id<MyObject>: Encode` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method(a)]
  | |         fn a(&self) -> Id<Self>;
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Id<MyObject>`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `Id<MyObject>` to implement `EncodeReturn`
  = note: required for `Id<MyObject>` to implement `ConvertReturn`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
...
  |         R: ConvertReturn,
  |            ^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: MaybeUnwrap` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method_id(b)]
  | |         fn b(&self) -> i32;
  | |     }
  | | );
  | |_^ the trait `MaybeUnwrap` is not implemented for `i32`
  |
  = help: the following other types implement trait `MaybeUnwrap`:
            Id<T>
            Allocated<T>
            Option<Id<T>>
note: required by a bound in `send_message_id`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |                                                       ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MsgSendId::send_message_id`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Box<i32>: Encode` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method(c:)]
  | |         fn c(&self, arg: Box<i32>);
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Box<i32>`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `Box<i32>` to implement `EncodeArgument`
  = note: required for `Box<i32>` to implement `ConvertArgument`
  = note: required for `(Box<i32>,)` to implement `ConvertArguments`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
  |     where
  |         A: ConvertArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<(), Id<NSObject>>: Encode` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method(error:)]
  | |         fn error(arg: i32) -> Result<(), Id<NSObject>>;
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Result<(), Id<NSObject>>`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `Result<(), Id<NSObject>>` to implement `EncodeReturn`
  = note: required for `Result<(), Id<NSObject>>` to implement `ConvertReturn`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
...
  |         R: ConvertReturn,
  |            ^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<Id<MyObject>, Id<NSObject>>: MaybeUnwrap` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method_id(error:)]
  | |         fn error_id(arg: i32) -> Result<Id<Self>, Id<NSObject>>;
  | |     }
  | | );
  | |_^ the trait `MaybeUnwrap` is not implemented for `Result<Id<MyObject>, Id<NSObject>>`
  |
  = help: the following other types implement trait `MaybeUnwrap`:
            Id<T>
            Allocated<T>
            Option<Id<T>>
note: required by a bound in `send_message_id`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_id.rs
  |
  |     unsafe fn send_message_id<A: ConvertArguments, R: MaybeUnwrap<Input = U>>(
  |                                                       ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MsgSendId::send_message_id`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MainThreadMarker: Encode` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method(mainThreadMarkerAsReturn)]
  | |         fn main_thread_marker_as_return() -> MainThreadMarker;
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `MainThreadMarker`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `MainThreadMarker` to implement `EncodeReturn`
  = note: required for `MainThreadMarker` to implement `ConvertReturn`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
...
  |         R: ConvertReturn,
  |            ^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)
